--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,4 +1,4 @@
-name : 'Prueba 1'
+name : 'Prueba'
 # description: 'Saludar a alguien y guardar la fecha'
 # inputs:
 #   who-to-greet: # id of intput
