--- a/.github/workflows/testExpressCiCd.yml
+++ b/.github/workflows/testExpressCiCd.yml
@@ -1,5 +1,5 @@
-name : 'testExpress1'
 on: push
+name : testExpress1
 jobs:
   deploy:
     name: Prueba con Docker
@@ -7,7 +7,7 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: crear y mandar push a docker
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v1
         with:
           username: ${{ secrets.SECRET_USERNAME }}
           password: ${{ secrets.SECRET_PASSWORD }}
