--- a/.github/workflows/testExpressCiCd.yml
+++ b/.github/workflows/testExpressCiCd.yml
@@ -11,7 +11,7 @@ jobs:
         with:
           username: ${{ secrets.SECRET_USERNAME }}
           password: ${{ secrets.SECRET_PASSWORD }}
-          repository : ${{ github.repository }}
+          repository : ${{ github.testexpress }}
           tag_with_ref: true
           tag_with_sha: true
           tags: ${{github.sha}}
