--- a/.github/workflows/testExpressCiCd.yml
+++ b/.github/workflows/testExpressCiCd.yml
@@ -5,13 +5,14 @@ jobs:
     name: Prueba con Docker
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@master
+      - uses: jjulianz/testexpress@master
       - name: crear y mandar push a docker
         uses: docker/build-push-action@v2
         with:
           username: ${{ secrets.SECRET_USERNAME }}
           password: ${{ secrets.SECRET_PASSWORD }}
-          repository : ${{ github.testexpress }}
+          registry: docker.pkg.github.com
+          repository: jerray/testexpress
           tag_with_ref: true
           tag_with_sha: true
           tags: ${{github.sha}}
