--- a/.github/workflows/testExpressCiCd.yml
+++ b/.github/workflows/testExpressCiCd.yml
@@ -5,14 +5,14 @@ jobs:
     name: Prueba con Docker
     runs-on: ubuntu-22.04
     steps:
-      - uses: jjulianz/testexpress@master
+      - uses: jjulianzavaleta/testexpress@master
       - name: crear y mandar push a docker
         uses: docker/build-push-action@v2
         with:
           username: ${{ secrets.SECRET_USERNAME }}
           password: ${{ secrets.SECRET_PASSWORD }}
           registry: docker.pkg.github.com
-          repository: jerray/testexpress
+          repository:  jjulianzavaleta/testexpress
           tag_with_ref: true
           tag_with_sha: true
           tags: ${{github.sha}}
