--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,11 +2,11 @@ on: push
 name : testExpress1
 jobs:
   deploy:
-    name: Prueba con Docker
+    name: deploy to cluster
     runs-on: ubuntu-22.04
     steps:
-      - uses: jjulianzavaleta/testexpress@main
-      - name: crear y mandar push a docker
+      - uses: actions/checkout@main
+      - name: build and push to docker
         uses: docker/build-push-action@v2
         with:
           username: ${{ secrets.SECRET_USERNAME }}
