--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,25 +1,17 @@
-name: docker
-on:
-  push:
-    branches:
-      - "main"
+on: push
+name : testExpress1
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  deploy:
+    name: deploy to cluster
+    runs-on: ubuntu-22.04
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
+      - uses: actions/checkout@main
+      - name: build and push to docker
+        uses: docker/build-push-action@v2
         with:
           username: ${{ secrets.SECRET_USERNAME }}
           password: ${{ secrets.SECRET_PASSWORD }}
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          file: ./dockerfile
-          push: true
-          tags: ${{ secrets.SECRET_USERNAME  }}/clockbox:latest
+          repository: ${{ github.testexpress}}
+          tag_with_ref: true
+          tag_with_sha: true
+          tags: ${{github.sha}}
