--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,17 +1,25 @@
-on: push
-name : testExpress1
+name: docker
+on:
+  push:
+    branches:
+      - "main"
 jobs:
-  deploy:
-    name: deploy to cluster
+  build:
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@main
-      - name: build and push to docker
-        uses: docker/build-push-action@v2
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.SECRET_USERNAME }}
           password: ${{ secrets.SECRET_PASSWORD }}
-          repository: ${{ github.testexpress}}
-          tag_with_ref: true
-          tag_with_sha: true
-          tags: ${{github.sha}}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: ./dockerfile
+          push: true
+          tags: ${{ secrets.SECRET_USERNAME  }}/docker:v1
