--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /docker/mariadb
 10.152.1.15-20221118-231955-lnjgnb
 wordpress/wp-content/ai1wm-backups/10.152.1.15-20221118-231955-lnjgnb
+wordpress/wp-content/uploads/wp-statistics/GeoLite2-City.mmdb
